<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jsp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.SelectMatch">



    <TextView
        android:id="@+id/textview_second"
        android:layout_width="331dp"
        android:layout_height="61dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Recap"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="368dp"
        android:layout_height="267dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="201dp"
        android:background="#CBADFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Score"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textScore"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:layout_marginLeft="256dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textName"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/AddName1"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textName"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="8dp"
            android:text="@string/AddName2"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textName2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="123dp"
            android:layout_height="30dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Strengh"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textStrength"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="64dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="48dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textName2" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textStrength"
            app:layout_constraintEnd_toEndOf="@+id/textName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textName"
            app:layout_constraintTop_toTopOf="@+id/textStrength"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
