<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/test"
    android:tag="jsp"
    tools:context=".ui.notifications.NotificationsFragment">




    <Switch
        android:id="@+id/switchEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginBottom="178dp"
        android:text="OFF"
        app:layout_constraintBottom_toTopOf="@+id/switchLandscape"
        app:layout_constraintEnd_toEndOf="@+id/switchDark"
        app:layout_constraintStart_toStartOf="@+id/switchDark"
        app:layout_constraintTop_toTopOf="parent"
        android:checked="false"/>

    <Switch
        android:id="@+id/switchDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="101dp"
        android:text="OFF"
        app:layout_constraintBottom_toBottomOf="@+id/switchLandscape"
        app:layout_constraintEnd_toEndOf="@+id/switchLandscape"
        app:layout_constraintStart_toStartOf="@+id/switchLandscape"
        app:layout_constraintTop_toTopOf="@+id/switchEnglish"
        android:checked="false"/>

    <Switch
        android:id="@+id/switchLandscape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="272dp"
        android:text="OFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:checked="false"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/SwitchLang"
        app:layout_constraintBottom_toBottomOf="@+id/switchEnglish"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/SwitchDark"
        app:layout_constraintBottom_toBottomOf="@+id/switchDark"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="10dp"
        android:text="@string/SwitchLand"
        app:layout_constraintStart_toEndOf="@+id/switchLandscape"
        app:layout_constraintTop_toTopOf="@+id/switchLandscape" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="104dp"
        android:text="SETTINGS"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
